<resources>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="rimwidth">20</string>
    <string name="isLargeFontRequired">no</string>
    <string name="intent_isfrom">isFrom</string>
    <string name="intent_inquiry_input_title">inquiry_input_title</string>
    <string name="intent_inquiry_number">inquiry_number</string>
    <string name="intent_inquiry_detail">inquiry_details</string>
    <string name="intent_inquiry_info">inquiry_info</string>
    <string name="intent_enetwsal_input_title">enetwasal_input_title</string>
    <string name="intent_enetwasal_number">enetwasal_number</string>
    <string name="intent_enetwasal_company_number">enetwasal_Company_number</string>
    <string name="intent_ownerstatiticsvo">ownerstatiticsvo</string>
    <string name="intent_enetwasal_input_title">enetwasal_input_title</string>
    <string name="intent_enetwasal_expiry_status">enetwasal_number</string>
    <string name="intent_transcation_details">transcationdetail</string>
    <string name="intent_properson_details">properson</string>
    <string name="intent_enetwasal_details">quota_company_info</string>
    <string name="intent_inquiry_get_pandingpayment">get_pandingpayment</string>
    <string name="intent_enetwasal_single_details">quota_company_details</string>
    <string name="intent_enetwasal_isexpired_labourcard">expired_labourcard</string>
    <string name="intent_pendingtransaction_position">pendingtransaction_position</string>
    <string name="intent_pending_transcation_details">pendingtransaction</string>
    <string name="intent_rulesandprocedure_details">rules_procedure_details</string>
    <string name="intent_rulesandprocedure_title">rules_procedure_title</string>
    <string name="intent_pending_transcation_webview">transcation_webview</string>
    <string name="intent_webview_eservicecall">eservice_call</string>
    <string name="intent_eservice_call">eservice_companycall</string>
    <string name="intent_eservice_companyno">mCompanyNo</string>
    <string name="intent_eservice_template">mTemplate</string>
    <string name="intent_eservice_type">mType</string>
    <string name="intent_eservice_detailsurl">mDetailsURL</string>
    <string name="intent_eservice_serviceid">mServiceID</string>
    <string name="intent_eservice_servicecode">mServiceCode</string>
    <string name="intent_eservice_company_expiredlabourcard">mlabourcardno</string>
    <string name="intent_enetwasal_transaction_number">enetwasal_transaction_number</string>
    <string name="intent_enetwasal_form_title">intent_enetwasal_form_title</string>
    <string name="intent_enetwasal_input_value">intent_enetwasal_input_value</string>
    <string name="intent_enetwasal_from_date">intent_enetwasal_from_date</string>
    <string name="intent_enetwasal_to_date">intent_enetwasal_to_date</string>
    <string name="intent_enetwasal_company_name">intent_enetwasal_company_name</string>
    <string name="map_api_key">AIzaSyBrZvLNzkL5zWZJ3_oW2DY4TfJQDyE48N0</string>
    <string name="upgrade">ترقية</string>
    <string name="Dialogtitle">النسخة الجديدة!</string>
    <string name="Dialogmessage">لنسخة الجديدة من وزارة العمل لتطبيقات الهاتف المتحرك المتاحة في المتجر</string>
    <string name="uniqueUser">Mobileuser</string>
    <string name="uniquePassword">1dd12%^eUe1yP</string>
    <string name="office_name">Office Name</string>
    <string name="offices">Offices</string>
    <string name="map">Map</string>
    <string name="contract_residance">Contract Residance</string>
    <string name="contract_transportation">Transportation</string>
    <string name="contract_type">Contract Type</string>
    <string name="ban_expiry">Ban Expiry</string>
    <string name="ban_expiry_date">Ban Expiry Date</string>
    <string name="quota">Quota</string>
    <string name="fax">Fax</string>
    <string name="phone">Phone</string>
    <string name="company_information">Company Information</string>
    <string name="emirate">Emirate</string>
    <string name="company_name">Company Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="license">License</string>
    <string name="total_employee">Total Employees</string>
    <string name="license_type">License Type</string>
    <string name="company_labour_office">Labour Office</string>
    <string name="quota_type">Quota Type</string>
    <string name="abscond">Abscond</string>
    <string name="subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="old_company_code">Old Company Number</string>
    <string name="license_expiry_date">License Expiry Date</string>
    <string name="license_issued_place">License Issued Place</string>
    <string name="po_box_number">Po-Box Number</string>
    <string name="quota_Used">Quota Used</string>
    <string name="quota_approved">Quota Approved</string>
    <string name="company_license_number">Company License Number</string>
    <string name="transaction_info">Transaction Information</string>
    <string name="pending_transaction_company_no">Company Number</string>
    <string name="pending_transaction_company_name">Company Name</string>
    <string name="pending_transaction_service_no">Service Number</string>
    <string name="pending_transaction_service_name">Service Name</string>
    <string name="pending_transaction_transaction_id">Transaction Number</string>
    <string name="pending_transaction_add_date">Add Date</string>
    <string name="pending_transaction_payment_page">Payment Page</string>
    <string name="pending_transaction_payment_delete">Delete</string>
    <string name="pending_transaction_payment_payment">"Proceed
Transaction"</string>
    <string name="company">Company</string>
    <string name="service_information">Service Information</string>
    <string name="feedback_hint_name">Name</string>
    <string name="feedback_hint_Mobile">Mobile</string>
    <string name="feedback_hint_email">Email</string>
    <string name="feedback_hint_subject">Subject*</string>
    <string name="feedback_hint_description">Description*</string>
    <string name="feedback_mandatory_field">* Mandatory fields</string>
    <string name="company_code">Company Code</string>
</resources>