<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/fragment_feedback_header" layout="@layout/header" />
    <ImageView android:id="@id/fragment_feedback_banner" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/fragment_feedback_banner" android:scaleType="centerCrop" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/screen_padding_leftRight" android:paddingTop="@dimen/screen_padding_topBottom" android:paddingRight="@dimen/screen_padding_leftRight" android:paddingBottom="@dimen/screen_padding_topBottom" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subject" style="@style/text_black_14_smallPadding" />
            <EditText android:ellipsize="end" android:id="@id/fragment_feedback_edittext_name" android:background="@drawable/bg_textbox_login" android:padding="@dimen/padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:hint="@string/feedback_hint_name" android:singleLine="true" android:inputType="textCapSentences" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <EditText android:ellipsize="end" android:id="@id/fragment_feedback_edittext_mobile" android:background="@drawable/bg_textbox_login" android:padding="@dimen/padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:layout_marginRight="@dimen/margin_5" android:hint="@string/feedback_hint_Mobile" android:singleLine="true" android:layout_weight="1.0" android:inputType="phone" />
                <EditText android:ellipsize="end" android:id="@id/fragment_feedback_edittext_email" android:background="@drawable/bg_textbox_login" android:padding="@dimen/padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_5" android:layout_marginTop="@dimen/margin_10" android:hint="@string/feedback_hint_email" android:singleLine="true" android:layout_weight="1.0" android:inputType="textEmailAddress" />
            </LinearLayout>
            <EditText android:ellipsize="end" android:id="@id/fragment_feedback_edittext_subject" android:background="@drawable/bg_textbox_login" android:padding="@dimen/padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:hint="@string/feedback_hint_subject" android:singleLine="true" android:inputType="textEmailSubject" />
            <TextView android:textStyle="bold" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description" style="@style/text_black_14_smallPadding" />
            <ae.gov.mol.helper.ActionEditText android:ellipsize="end" android:gravity="top" android:id="@id/fragment_feedback_edittext_description" android:background="@drawable/bg_textbox_login" android:padding="@dimen/padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:hint="@string/feedback_hint_description" android:minLines="4" android:imeOptions="actionDone" />
            <TextView android:id="@id/fragment_feedback_textview_mandatory_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_mandatory_field" style="@style/text_black_14_smallPadding" />
            <Button android:textSize="@dimen/TextLargest" android:textColor="@android:color/white" android:id="@id/fragment_feedback_submitbtn" android:background="@drawable/bg_button_submit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_10" android:minWidth="@dimen/button_minimum_width" android:minHeight="@dimen/button_minimum_height" android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>